--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Home | Apeperia</title>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&family=Open+Sans:wght@300;400;700&display=swap" rel="stylesheet">
+  <!-- É importante se atentar na ordem que é colocado a importação do arquivo reset de css pois se ele vier depois ele vai sobrescrever as alterações dos arquivos principais. Precisa ser organizado de uma ordem lógica! -->
+  <link rel="stylesheet" href="css/reset.css">
+  <link rel="stylesheet" href="css/base.css">
   <link rel="stylesheet" href="css/cabecalho.css">
   <link rel="stylesheet" href="css/chamada.css">
 </head>
